<resources>
    <string name="app_name">PleinAirJournal</string>
    <string name="celsius">&#176;C</string>
    <string name="description">Plein Air Journal encourages a practice called plein air, the act of creating art outdoors, and allows you to keep track of your creations in a journal.</string>

    <string name="spinner_prompt_month">Month</string>
    <string name="spinner_prompt_year">Year</string>
    <string name="spinner_prompt_location">Location</string>

    <string name="button_take_photo">Take a photo</string>
    <string name="button_retake_photo">Retake the photo</string>
    <string name="button_create_entry">Create</string>
    <string name="button_update_entry">Edit</string>
    <string name="button_save_update_entry">Save</string>

    <string name="compass_preamble">You\'re facing</string>

    <string name="prompt_comment">How was your drawing session?</string>
    <string name="prompt_location">Where did you draw at?</string>

    <string name="dialog_filter_title">Filter your escapades</string>
    <string name="dialog_filter_button">Go!</string>
    <string name="dialog_filter_reset_button">Reset</string>
    <string name="dialog_filter_cancel_button">Cancel</string>
    <string name="dialog_delete_entry_title">Deletion imminent?</string>
    <string name="dialog_delete_entry_message">You want to release this drawing into oblivion (delete it)?</string>
    <string name="dialog_delete_entry_confirm">Yes!</string>
    <string name="dialog_delete_entry_cancel">Nevermind</string>

    <string name="prompt_create_entry_error">Sorry, you either haven\'t taken a photo or input a location!</string>

    <string-array name="year_array">
        <item></item>
        <item>2019</item>
        <item>2018</item>
    </string-array>

    <string-array name="month_array">
        <item></item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="cardinal_array">
        <item>North</item>
        <item>Northeast</item>
        <item>East</item>
        <item>Southeast</item>
        <item>South</item>
        <item>Southwest</item>
        <item>West</item>
        <item>Northwest</item>
    </string-array>
</resources>
